--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,6 @@ input:focus-visible {
     border-radius: 10px;
 }
 
-/*bacground lightgray text align center list style none border bottom + homevr da aggiungere */
-
 .to-do-list {
     margin-top: 30px;
     background-color: rgb(221, 221, 221);
@@ -53,6 +51,10 @@ input:focus-visible {
 
 ul {
     list-style: none;
+}
+
+.cecked {
+    color: red;
 }
 
 li {
