--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,8 @@ li {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid black;
-    padding: 10px 5px
+    padding: 10px 5px;
+    color: black;
 }
 
 li:hover {
