--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,8 @@ ul {
 }
 
 .cecked {
-    color: red;
+    color: green;
+    text-decoration: line-through;
 }
 
 li {
@@ -62,7 +63,7 @@ li {
     justify-content: space-between;
     border-bottom: 1px solid black;
     padding: 10px 5px;
-    color: black;
+    color: red;
 }
 
 li:hover {
